Data Binding Angular

--- a/Module II Source/Angular/AngProj1/my-tourism-web/src/app/my-new-component/my-new-component.component.html
+++ b/Module II Source/Angular/AngProj1/my-tourism-web/src/app/my-new-component/my-new-component.component.html
@@ -1,3 +1,15 @@
-<p>
+<button style='color:red' [style.fontWeight]="isBold ? 'bold': 'normal'">
   my-new-component works!
-</p>
+</button>
+<br/> <br/>
+<button style='color:red' [style.font-size.px]="fontSize">
+    my-new-component works!
+  </button>
+<br/> <br/>
+  <button style='color:red' [ngStyle]="addStyles()">
+      my-new-component works!
+    </button>
+
+    <button  (click)='onClick()'>Click Me</button>
+
+    <button on-click ='onClick()'>Click Me Too</button>
