--- a/Module II Source/Angular/AngProj1/my-tourism-web/src/styles.css
+++ b/Module II Source/Angular/AngProj1/my-tourism-web/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+.boldClass{
+
+    font-weight: bold;
+}
+
+.colorClass{
+
+    
+    color:red;
+}
+
+
+.italicClass{
+
+    font-style: italic;
+}
